# a2a-python

./: .coveragerc  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  Gemini.md  README.md  buf.gen.yaml  noxfile.py  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/actions/spelling/: allow.txt  excludes.txt
.github/linters/: .ruff.toml
.github/workflows/: linter.yaml  release-please.yml  security.yaml  spelling.yaml  unit-tests.yml  update-a2a-types.yml
scripts/: format.sh  generate_types.sh  grpc_gen_post_processor.py
src/a2a/: _base.py  types.py
src/a2a/client/: __init__.py  client.py  errors.py  grpc_client.py
src/a2a/client/auth/: interceptor.py
src/a2a/client/transports/: grpc.py
src/a2a/grpc/: a2a_pb2.py  a2a_pb2.pyi  a2a_pb2_grpc.py
src/a2a/server/: models.py
src/a2a/server/agent_execution/: context.py  simple_request_context_builder.py
src/a2a/server/apps/: __init__.py  starlette_app.py
src/a2a/server/apps/jsonrpc/: __init__.py  fastapi_app.py  jsonrpc_app.py  (+1 more)
src/a2a/server/events/: event_consumer.py  event_queue.py  in_memory_queue_manager.py
src/a2a/server/request_handlers/: __init__.py  default_request_handler.py  grpc_handler.py  jsonrpc_handler.py  request_handler.py  response_helpers.py  rest_handler.py
src/a2a/server/tasks/: __init__.py  base_push_notification_sender.py  database_push_notification_config_store.py  database_task_store.py  inmemory_push_notifier.py  push_notification_config_store.py  push_notifier.py  result_aggregator.py  task_manager.py  task_store.py  task_updater.py
src/a2a/utils/: __init__.py  constants.py  error_handlers.py  helpers.py  message.py  proto_utils.py  task.py  telemetry.py
tests/: test_types.py
tests/auth/: test_user.py
tests/client/: test_auth_middleware.py  test_base_client.py  test_client.py  test_client_factory.py  test_client_task_manager.py  test_grpc_client.py  test_jsonrpc_client.py  test_legacy_client.py
tests/extensions/: test_common.py
tests/integration/: test_client_server_integration.py
tests/server/: test_integration.py
tests/server/agent_execution/: test_context.py  test_simple_request_context_builder.py
tests/server/apps/jsonrpc/: test_jsonrpc_app.py  test_serialization.py
tests/server/apps/rest/: test_fastapi_app.py
tests/server/events/: test_event_consumer.py  test_event_queue.py  test_inmemory_queue_manager.py
tests/server/request_handlers/: test_default_request_handler.py  test_grpc_handler.py  test_jsonrpc_handler.py  test_response_helpers.py
tests/server/tasks/: test_database_push_notification_config_store.py  test_database_task_store.py  test_inmemory_push_notifications.py  test_inmemory_push_notifier.py  test_inmemory_task_store.py  test_push_notification_sender.py  test_result_aggregator.py  test_task_manager.py  test_task_updater.py
tests/utils/: test_artifact.py  test_helpers.py  test_message.py  test_proto_utils.py  test_task.py  test_telemetry.py
(+2 files in other folders)
